--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <html lang="en">
 
 <head>
+    <link rel="stylesheet" href="style.css">
+
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -9,7 +11,21 @@
 </head>
 
 <body>
-
+    <div class="card">
+        <div class="profile-pics">
+            <img class="profile-pic" src="./profile.gif" alt="profile-pics">
+        </div>
+        <div class="profile-name">
+            <h1>
+                bwbl
+            </h1>
+            <p>
+                je suis <span id="mot"></span><span id="bar">|</span>
+            </p>
+        </div>
+        <div class=""></div>
+    </div>
+    <script src="index.js"></script>
 </body>
 
 </html>
