--- a/index.html
+++ b/index.html
@@ -1,31 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <link rel="stylesheet" href="style.css">
-
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>bwbl</title>
-</head>
-
-<body>
-    <div class="card">
-        <div class="profile-pics">
-            <img class="profile-pic" src="./profile.gif" alt="profile-pics">
-        </div>
-        <div class="profile-name">
-            <h1>
-                bwbl
-            </h1>
-            <p>
-                je suis <span id="mot"></span><span id="bar">|</span>
-            </p>
-        </div>
-        <div class=""></div>
-    </div>
-    <script src="index.js"></script>
-</body>
-
+  <head>
+    <meta charset="UTF-8" />
+    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Vite + Svelte</title>
+  </head>
+  <body>
+    <div id="app"></div>
+    <script type="module" src="/src/main.js"></script>
+  </body>
 </html>
