--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <div class="card-container">
         <div class="card profile">
             <img alt="profile" class="profile-picture" data-tilt data-tilt-scale="1.05" data-tilt-speed="4000"
-                 src="/profile.webp"/>
+                 src="/public/profile.webp"/>
             <div class="text">
                 <h1>bwbl</h1>
                 <p>
@@ -38,15 +38,15 @@
             <div class="card friends">
                 <h2>Friends</h2>
                 <div class="friend Hytracer">
-                    <img alt="hytracer" class="hytracer picture" src="/hytracer.webp">
+                    <img alt="hytracer" class="hytracer picture" src="/public/hytracer.webp">
                     <a href="https://hytracer.ink/"><p>Hytracer</p></a>
                 </div>
                 <div class="friend akwa">
-                    <img alt="akwa" class="akwa picture" src="/akwa.webp">
+                    <img alt="akwa" class="akwa picture" src="/public/akwa.webp">
                     <a href="https://akwa.online"><p>ākwa</p></a>
                 </div>
                 <div class="friend 𝗞𝗼𝗿𝗲𝗞𝗮𝗶𝗻𝗲">
-                    <img alt="korekaine" class="korekaine picture" src="/korekaine.webp">
+                    <img alt="korekaine" class="korekaine picture" src="/public/korekaine.webp">
                     <a href="https://soundcloud.com/korekaine"><p>korekaine</p></a>
                 </div>
 
