--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
     <link href="style.css" rel="stylesheet"/>
     <script src="main.js"></script>
-    <title>test</title>
+    <title>() => { return bwbl.me return bwbl.me  }</title>
 </head>
 <body>
 <div class="main">
